Added Tavily API and Search for Professors!